force-app/main/default/objects/ASM_Role_Hierarchy__c/ASM_Role_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Account Point of Contacts</label>
    <nameField>
        <displayFormat>APOC{000000}</displayFormat>
        <label>APOC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Point of Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>