force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Point of Contacts</relationshipLabel>
    <relationshipName>Account_Point_of_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>