force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <formula>If(Role_User_Name__c != null,Role_User_Name__r.Email
, NCR_Employee_Detail__r.Quicklook_ID__c+&quot;@ncr.com&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>