force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <formula>TEXT(Account__r.LOB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB</label>
    <type>Text</type>
</CustomField>