force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <externalId>true</externalId>
    <label>Master</label>
    <length>100</length>
    <type>Text</type>
</CustomField>