force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/NCR_Employee_Detail__c.field-meta.xml
<CustomField>
    <fullName>NCR_Employee_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to associate NCR Employee Detail so that we can assign the roles to the users.</description>
    <label>NCR Employee Detail</label>
    <referenceTo>NCR_Employee_Detail__c</referenceTo>
    <relationshipLabel>Account Point of Contacts</relationshipLabel>
    <relationshipName>Account_Point_of_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>