force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/QuickLook_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickLook_ID__c</fullName>
    <label>Role User QuickLook ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>