force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Director</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>Account Services Manager</fullName>
                <isActive>false</isActive>
                <label>Account Services Manager</label>
            </value>
            <value>
                <fullName>Account Support</fullName>
            </value>
            <value>
                <fullName>Account Support Analyst</fullName>
            </value>
            <value>
                <fullName>Account Support Manager</fullName>
            </value>
            <value>
                <fullName>Channel Account Manager</fullName>
            </value>
            <value>
                <fullName>CMS Account Manager</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>COE</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer Advocate</fullName>
            </value>
            <value>
                <fullName>Customer Delivery Partner (CDP)</fullName>
            </value>
            <value>
                <fullName>Customer Project Manager (CPM)</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Customer Success Analyst</fullName>
            </value>
            <value>
                <fullName>Customer Success Leader</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Executive Service Manager</fullName>
            </value>
            <value>
                <fullName>Executive Services Manager</fullName>
                <isActive>false</isActive>
                <label>Executive Services Manager</label>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Field Operations</fullName>
            </value>
            <value>
                <fullName>Field Service Coordinator</fullName>
            </value>
            <value>
                <fullName>Field Training</fullName>
            </value>
            <value>
                <fullName>Global Account Manager</fullName>
            </value>
            <value>
                <fullName>Inside Sales Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>