force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/Role_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Point_of_Contacts_1</relationshipName>
    <type>Lookup</type>
</CustomField>