force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/Role_User_Qlook_Id__c.field-meta.xml
<CustomField>
    <fullName>Role_User_Qlook_Id__c</fullName>
    <formula>If(Role_User_Name__c != null,Role_User_Name__r.Quicklook_ID__c, NCR_Employee_Detail__r.Quicklook_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User QuicklookId</label>
    <type>Text</type>
</CustomField>