force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/RoleMCNId__c.field-meta.xml
<CustomField>
    <fullName>RoleMCNId__c</fullName>
    <externalId>true</externalId>
    <label>RoleMCNId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>