force-app/main/default/objects/ASM_Role_Hierarchy__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>If(Role_User_Name__c!=null,Role_User_Name__r.FirstName + &apos; &apos; + Role_User_Name__r.LastName, NCR_Employee_Detail__r.User_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role User Name</label>
    <type>Text</type>
</CustomField>